test(backend): add API tests covering core functionality
chore(backend): update .gitignore, refactor imports, use UTC; Pydantic v2 compat

- Expand backend/.gitignore to ignore SQLite DB/artifacts, venv, caches/bytecode, coverage, and .DS_Store
- Refactor imports to package-qualified (backend.models/schemas)
- Switch to sqlalchemy.orm.declarative_base and timezone-aware datetimes (datetime.now(UTC))
- Pydantic v2: enable from_attributes via model_config

Add backend API tests with docstrings covering:
  - save/upsert increments play_count
  - soft-delete excludes from list; restore preserves play_count
  - favorite endpoint is idempotent and favorites are pinned first
  - sorting by recent and plays
  - validation (422) and 404s
  - per-user isolation via cookie-based user_id

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,12 +1,27 @@
 .env
 .env.*
+
+# SQLite dev database artifacts
 database.db
 database.db-journal
-.sqlite3
-.db
-.db-journal
+*.sqlite3
+*.db
+*.db-journal
+
+# Virtual environment
 venv/
-pycache_/
-.pyc
+
+# Python caches/bytecode
+__pycache__/
+**/__pycache__/
+*.pyc
+
+# Pytest cache
 .pytest_cache/
+
+# macOS
 .DS_Store
+
+# Coverage (optional)
+.coverage
+htmlcov/
