--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DATABSE_URL="sqlite:///./database.db"
 FRONTEND_ORIGIN="http://localhost:3000"
+COOKIE_SECURE=true # true for prodcution, false for dev
